week7-weekly-task/manifests/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: devops-week7
  labels:
    purpose: devops-internship-week7
