week7-weekly-task/manifests/03-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: week7-app
  namespace: devops-week7
  labels:
    app: week7-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: week7-app
  template:
    metadata:
      labels:
        app: week7-app
    spec:
      containers:
        - name: week7-app
          image: ghanshyamramole/jewellery
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "200m"
              memory: "128Mi"
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 3
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
