week7-weekly-task/manifests/04-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: week7-app-service
  namespace: devops-week7
spec:
  type: NodePort
  selector:
    app: week7-app
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
