week7-weekly-task/manifests/05-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: week7-app-ingress
  namespace: devops-week7
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: week7-app.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: week7-app-service
                port:
                  number: 80
